applications/istio-system/templates/ingress-kiali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/secure-backends: 'false'
  name: kiali
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - host: kiali.k3sdemo.lan
      http:
        paths:
          - backend:
              service:
                name: kiali
                port:
                  number: 20001
            path: /
